--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   echo:
-    runs-on: Ubuntu 22.04.5 LTS  
+    runs-on: ubuntu-22.04
     steps:
     - name: hello
       run: echo "Hello, Github Actions!"
